# rust-sfml

./: .ci.cargo.config  .gitignore  .gitmodules  .travis.cargo.config  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md  TODO.md  build.rs  build_sys_common.rs  clippy.toml  example_common.rs  rustfmt.toml
.github/workflows/: linux.yml  macos.yml  rust.yml  windows.yml
CSFML/: .clang-format  README.md  bindgen-wrapper.h  format.sh  gen-bindings.sh  license.txt  readme.txt
CSFML/include/: Config.h
CSFML/include/Audio/: Listener.h  Music.h  Sound.h  SoundBuffer.h  SoundBufferRecorder.h  SoundRecorder.h  SoundStream.h
CSFML/include/Graphics/: BlendMode.h  CircleShape.h  Color.h  ConvexShape.h  Font.h  FontInfo.h  Glsl.h  Glyph.h  Image.h  PrimitiveType.h  Rect.h  RectangleShape.h  RenderStates.h  RenderTexture.h  RenderWindow.h  Shader.h  Shape.h  Sprite.h  Text.h  Texture.h  Transform.h  Types.h  VertexBuffer.h  View.h
CSFML/src/: CallbackStream.h  ConvertEvent.h
csfml-audio-sys/: Cargo.toml  build.rs
csfml-audio-sys/src/: lib.rs
csfml-graphics-sys/: Cargo.toml  build.rs
csfml-graphics-sys/src/: lib.rs
csfml-network-sys/: Cargo.toml  build.rs
csfml-network-sys/src/: lib.rs
csfml-system-sys/: Cargo.toml  build.rs
csfml-system-sys/src/: lib.rs
csfml-window-sys/: Cargo.toml  build.rs
csfml-window-sys/src/: lib.rs
demo/: demo.rs
examples/: Cargo.toml  README.md  borrow_res.rs  borrowed-resources.rs  circle.rs  clock.rs  cursor.rs  custom-drawable.rs  custom-shape.rs  custom-sound-recorder.rs  custom-sound-stream.rs  custom_drawable.rs  documentation_example.rs  joystick.rs  mouse.rs  moving_circle.rs  music-stream.rs  opengl-context.rs  opengl.rs  pong.rs  positional-audio.rs  rc-resources.rs  rc_res.rs  rc_sprites.rs  resource-holder.rs  shader.rs  shape.rs  sound-capture.rs  sound.rs  sound_capture.rs  sound_stream.rs  spritemark.rs  unicode-text-entry.rs  vertex-arrays.rs  vertex-buffers.rs  vertex_arrays.rs  video_modes.rs  window-test.rs
examples/pong/: pong.rs
examples/sound/: sound.rs
examples/sound_capture/: sound_capture.rs
examples/src/: borrow_res.rs  custom_drawable.rs  pong.rs  shape.rs  sound.rs  sound_capture.rs  vertex_arrays.rs
ffi/: README.md
ffi/csfml-audio-sys/: Cargo.toml  build.rs
ffi/csfml-audio-sys/src/: lib.rs
ffi/csfml-graphics-sys/: Cargo.toml  build.rs
ffi/csfml-graphics-sys/src/: lib.rs
ffi/csfml-network-sys/: Cargo.toml  build.rs
ffi/csfml-network-sys/src/: lib.rs
ffi/csfml-system-sys/: Cargo.toml  build.rs
ffi/csfml-system-sys/src/: lib.rs
ffi/csfml-window-sys/: Cargo.toml  build.rs
ffi/csfml-window-sys/src/: lib.rs
ffi/sfml-build/: Cargo.toml
sfml-audio/: Cargo.toml
sfml-audio/examples/: custom-sound-stream.rs  music-stream.rs  sound-capture.rs  sound.rs
sfml-audio/src/: lib.rs  listener.rs  music.rs  sound.rs  sound_buffer.rs  sound_buffer_recorder.rs  sound_source.rs  sound_stream.rs
sfml-graphics/: Cargo.toml
sfml-graphics/examples/: borrowed-resources.rs  custom-drawable.rs  custom-shape.rs  mouse.rs  pong.rs  unicode-text-entry.rs  vertex-arrays.rs
sfml-graphics/src/: blend_mode.rs  circle_shape.rs  color.rs  convex_shape.rs  custom_shape.rs  drawable.rs  font.rs  glyph.rs  image.rs  lib.rs  primitive_type.rs  rect.rs  rectangle_shape.rs  render_states.rs  render_target.rs  render_texture.rs  render_window.rs  shader.rs  shape.rs  sprite.rs  text.rs  texture.rs  transform.rs  transformable.rs  vertex.rs  vertex_array.rs  view.rs
sfml-network/: Cargo.toml
sfml-network/src/: ftp.rs  http.rs  ip_address.rs  lib.rs  packet.rs  socket_status.rs  tcp_listener.rs  tcp_socket.rs  udp_socket.rs
sfml-system/: Cargo.toml
sfml-system/src/: clock.rs  lib.rs  raw_conv.rs  sleep.rs  time.rs  vector2.rs  vector3.rs
sfml-types/: Cargo.toml
sfml-types/src/: lib.rs  rect.rs  vector2.rs
sfml-window/: Cargo.toml
sfml-window/src/: context.rs  context_settings.rs  event.rs  joystick.rs  keyboard.rs  lib.rs  mouse.rs  sensor.rs  style.rs  touch.rs  video_mode.rs  window.rs
src/: ffi.rs  inputstream.rs  lib.rs  own_ptr.rs  raw_conv.rs  rsfml.rc  rsfml.rs  sf_bool_ext.rs  sf_box.rs  thread_safety.rs  unicode_conv.rs
src/audio/: capture.rs  listener.rs  mod.rs  music.rs  sfml_audio.rs  sound.rs  sound_buffer.rs  sound_buffer_recorder.rs  sound_channel.rs  sound_recorder.rs  sound_source.rs  sound_status.rs  sound_stream.rs  time_span.rs
src/cpp/: fbox.rs  mod.rs  string.rs  vector.rs
src/ext/: event.rs  sf_bool_ext.rs
src/ffi/: audio.rs  audio_bindgen.rs  foreign_ptr.rs  graphics.rs  graphics_bindgen.rs  mod.rs  network.rs  sfml_types.rs  system.rs  system_bindgen.rs  window.rs  window_bindgen.rs
src/gl/: mod.rs
src/graphics/: base_shape.rs  blend_mode.rs  circle_shape.rs  color.rs  convex_shape.rs  custom_shape.rs  drawable.rs  font.rs  glsl.rs  glyph.rs  image.rs  mod.rs  primitive_type.rs  rc_font.rs  rc_sprite.rs  rc_text.rs  rc_texture.rs  rect.rs  rectangle_shape.rs  render_states.rs  render_target.rs  render_texture.rs  render_window.rs  sfml_graphics.rs  shader.rs  shape.rs  sprite.rs  text.rs  text_style.rs  texture.rs  traits.rs  transform.rs  transformable.rs  vertex.rs  vertex_array.rs  vertex_buffer.rs  view.rs
src/network/: ftp.rs  http.rs  ip_address.rs  mod.rs  packet.rs  sfml_network.rs  socket_status.rs  tcp_listener.rs  tcp_socket.rs  udp_socket.rs
src/osx_hack/: start.rs
src/rsfml/: lib.rs  rsfml.rs  sfml_types.rs
src/system/: angle.rs  bool_.rs  buffer.rs  clock.rs  input_stream.rs  inputstream.rs  mod.rs  mutex.rs  raw_conv.rs  sf_bool.rs  sf_box.rs  sfml_system.rs  sleep.rs  std_str.rs  stream.rs  string.rs  thread.rs  time.rs  vector2.rs  vector3.rs
src/traits/: drawable.rs  mod.rs  shape_impl.rs  traits.rs  upcast.rs  wrappable.rs
src/window/: clipboard.rs  context.rs  context_settings.rs  cursor.rs  event.rs  joystick.rs  keyboard.rs  mod.rs  mouse.rs  sensor.rs  sfml_window.rs  style.rs  thread_safety.rs  touch.rs  video_mode.rs  window.rs  window_enums.rs  window_style.rs
tests/: network.rs
(+389 files in other folders)
