[package]
name = "csfml-audio-sys"
description = "Bindings to csfml-audio"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-audio"
build = "build.rs"
homepage = "http://www.rust-sfml.org/"
documentation = "https://crates.fyi/crates/csfml-audio-sys/0.1.0/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies]
libc = "0.2.2"

[dependencies.sfml-types]
path = "../sfml-types"
version = "0.1.0"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.1.0"
