[package]
name = "csfml-graphics-sys"
description = "Bindings to csfml-graphics"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-graphics"
build = "build.rs"
homepage = "http://www.rust-sfml.org/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies]
libc = "0.2.2"

[dependencies.sfml-types]
path = "../sfml-types"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"

[dependencies.csfml-window-sys]
path = "../csfml-window-sys"
