[package]
name = "csfml-system-sys"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-system"
build = "build.rs"
homepage = "http://www.rust-sfml.org/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies]
libc = "0.2.2"
