[package]
name = "csfml-system-sys"
description = "Bindings to csfml-system"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-system"
build = "build.rs"
documentation = "https://crates.fyi/crates/csfml-system-sys/0.1.0/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies]
libc = "0.2.2"
