[package]
name = "sfml-examples"
version = "0.0.1"
authors = ["jeremyletang"]

[dependencies]
libc = "0.1"
rand = "*"

[dependencies.sfml]
path = ".."

[[bin]]
name = "borrow_res"

[[bin]]
name = "custom_drawable"

[[bin]]
name = "pong"

[[bin]]
name = "rc_res"

[[bin]]
name = "shape"

[[bin]]
name = "sound"

[[bin]]
name = "sound_capture"

[[bin]]
name = "vertex_arrays"
