[package]
name = "sfml-graphics"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
bitflags = "0.5"

[dependencies.sfml-system]
path = "../sfml-system"

[dependencies.sfml-window]
path = "../sfml-window"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"

[dependencies.csfml-window-sys]
path = "../csfml-window-sys"

[dependencies.csfml-graphics-sys]
path = "../csfml-graphics-sys"

[dev-dependencies]
rand = "0.3"

[dev-dependencies.sfml-audio]
path = "../sfml-audio"
