[package]
name = "csfml-audio-sys"
description = "Bindings to csfml-audio"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-audio"
build = "build.rs"
documentation = "https://crates.fyi/crates/csfml-audio-sys/0.1.0/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.1.0"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.1.0"
