[package]
name = "csfml-audio-sys"
description = "Bindings to csfml-audio"
version = "0.5.0"
authors = ["rust-sfml developers"]
links = "csfml-audio"
build = "build.rs"
documentation = "https://docs.rs/csfml-audio-sys"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"
keywords = ["sfml", "multimedia", "game"]

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.5.0"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.4.0"
