[package]
name = "csfml-network-sys"
description = "Bindings to csfml-network"
version = "0.2.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-network"
build = "build.rs"
documentation = "https://docs.rs/csfml-network-sys"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"
keywords = ["sfml", "multimedia", "game"]

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.5.0"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.4.0"
