[package]
name = "csfml-window-sys"
description = "Bindings to csfml-window"
version = "0.1.1"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
links = "csfml-window"
build = "build.rs"
documentation = "https://crates.fyi/crates/csfml-window-sys/0.1.0/"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.2.0"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.1.0"
