[package]
name = "csfml-window-sys"
description = "Bindings to csfml-window"
version = "0.2.0"
authors = ["rust-sfml developers"]
links = "csfml-window"
build = "build.rs"
documentation = "https://docs.rs/csfml-window-sys"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.2.1"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.1.0"
