[package]
name = "csfml-window-sys"
description = "Bindings to csfml-window"
version = "0.6.0"
authors = ["rust-sfml developers"]
links = "csfml-window"
build = "build.rs"
documentation = "https://docs.rs/csfml-window-sys"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"
keywords = ["sfml", "multimedia", "game"]

[dependencies.csfml-system-sys]
path = "../csfml-system-sys"
version = "0.6.0"

[build-dependencies.sfml-build]
path = "../sfml-build"
version = "0.4.0"
